--- a/homework.rmd
+++ b/homework.rmd
@@ -112,7 +112,7 @@ Graphical representation of the results was done with R [@r2020] and the package
 
 # Results
 
-The quality analysis with BUSCO did show lower completeness for the local available Illumina assembly of *D. coeliaca*, which was improved with our ONP reads from the practical course. Because of the low length of fragments we did stop the minION sequencing early to save resources for other for the other groups in the course, the report for the minION sequencing is online and public available as PDF on github^[[minION Report](https://github.com/chrishah/AMEB_2020_practical/blob/master/assembly-long/MinION/sequencing_reports/minion_report_Dceol_010720.pdf)]. Therefore, we used the local assembly from Illumina sequences, without ONP reads, for further analysis. The BUSCO analysis for the assembly of *L. minor*, which only included the minION data and was done by another group in the course, did result in 87 BUSCO genes and was used for further analysis.
+The quality analysis with BUSCO did show lower completeness for the local available Illumina assembly of *D. coeliaca*, which was improved with our ONP reads from the practical course. Because of the low length of fragments we did stop the minION sequencing early to save resources for other for the other groups in the course, the report for the minION sequencing is online and public available as PDF on github^[https://github.com/chrishah/AMEB_2020_practical/blob/master/assembly-long/MinION/sequencing_reports/minion_report_Dceol_010720.pdf]. Therefore, we used the local assembly from Illumina sequences, without ONP reads, for further analysis. The BUSCO analysis for the assembly of *L. minor*, which only included the minION data and was done by another group in the course, did result in 87 BUSCO genes and was used for further analysis.
 
 ```{r genetree, fig.cap="Singel gene phylogenetic trees for genes available for all given taxa.", echo=FALSE, fig.width = 2}
 knitr::include_graphics("data/gene_tree.pdf")
@@ -142,12 +142,12 @@ The paraphyletic position of Monopisthocotylean as basal group and Polyopisthoco
 
 The same as for life-style can be said for the evolutionary history of the life-cycle (complex vs. simple). Both Monogenea groups follow mostly a simple life-cycle, whereas Tremadoa life-cycle is more complex, and most of the time molluscs are involved, and Cestoda with generally one or two intermediate hosts with eggs from intestinal living adults leaving the host via feces [@gibson2014]. The evolutionary history could again have two distinct events from simple to complex and back to simple or the simple life-cycle in Polyopisthocotyleans could be still the ancestral trait. 
 
-The evolution of the feeding habit question is a little bit more difficult, but could good makes sense in our new proposed phylogenetic tree. Our basal group of Monopisthocotylean feeds mostly on skin and or mucus [@gibson2014]. This type of feeding could be potentially the ancestral plesiomorphic trait but it would make also sense if the ancestor already did feed on blood like most Polyopisthocotyleans, the more sophisticated haptor design could be an evolution over time [@park2007]. The split of the Cestoda taxa could happened earlier in history as previous thought [@littlewood1999; @olson200; @perkins2010; @laumer2014]. It is probably not the ancestral features as Cestoda absorb their nutrients through their surface layer and did loose traits for normal digestion, e.g. guts [@gibson2014], which is more or less a point of no return, at least in the given time frame. The close relationship between Trematodes and Polyopisthocotyleans could make sense as both diets are similar, mostly feeding on blood, and the evolutionary speciation could have happened by different location niches on the host (ecto- and endoparasitic).
+The evolution of the feeding habit question is a little bit more difficult, but could good makes sense in our new proposed phylogenetic tree. Our basal group of Monopisthocotylean feeds mostly on skin and or mucus [@gibson2014]. This type of feeding could be potentially the ancestral plesiomorphic trait but it would make also sense if the ancestor already did feed on blood like most Polyopisthocotyleans, the more sophisticated haptor design could be an evolution over time [@park2007]. The split of the Cestoda taxa could happened earlier in history as previous thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. It is probably not the ancestral features as Cestoda absorb their nutrients through their surface layer and did loose traits for normal digestion, e.g. guts [@gibson2014], which is more or less a point of no return, at least in the given time frame. The close relationship between Trematodes and Polyopisthocotyleans could make sense as both diets are similar, mostly feeding on blood, and the evolutionary speciation could have happened by different location niches on the host (ecto- and endoparasitic).
 
 Overall, our new proposed tree should give room for new discussion and shows the need for molecular studies on multiple taxa representing one group and the advantages in using a supermatrix of different genes. 
 
 # Acknowledgments
 
-Hahn, Christoph, Ph.D 
+Hahn, Christoph, Ph.D
 
 # References
